# S3Scanner

./: .coveragerc  .gitignore  .golangci.yml  .travis.yml  Dockerfile  LICENSE  LICENSE.txt  Makefile  README.md  README2.md  S3Bucket.py  S3Service.py  TestUtils.py  config.yml  conftest.py  exceptions.py  finds3.py  go.mod  go.sum  main.go  main_test.go  mkdocs.yml  pytest.ini  requirements.txt  s3Bucket.py  s3dumper.sh  s3finder.py  s3scanner.py  s3utils.py  scanner.py  setup.cfg  sites.txt  test.sh  testS3.sh  test_bucket.py  test_finder.py  test_scanner.py  test_service.py
.dev/: docker-compose.yml  entrypoint.sh
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: check-regions.yml  docker-publish-test.yml  docker-publish.yml  golangci-lint.yml  pr_test-coverage.yml  pr_test-matrix.yml  pythonapp.yml  release.yml  winget-release.yml
S3Scanner/: S3Bucket.py  S3Service.py  __main__.py  exceptions.py
bucket/: bucket.go  bucket_test.go
collection/: collection.go
db/: database.go  database_test.go
docs/: bucket-permissions.md  config.md  requirements.txt  s3scanner-development.md  storage-providers.md  usage.md
groups/: groups.go
log/: formatter_hook.go  nested_json_formatter.go
mq/: mq.go
packaging/: .goreleaser.yaml
permission/: permission.go  permission_test.go
provider/: aws.go  aws_test.go  credentials.go  custom.go  custom_test.go  digitalocean.go  digitalocean_test.go  dreamhost.go  dreamhost_test.go  gcp.go  linode.go  ovh.go  providers.go  providers_test.go  scaleway.go  wasabi.go  wasabi_test.go
s3bucket/: s3bucket.py
scripts/: create-danger1-bucket.py  create-danger2-bucket.py  dev_create-danger1-bucket.sh
tests/: test_bucket.py  test_scanner.py  test_service.py
worker/: mq_worker.go  mq_worker_test.go  worker.go  worker_test.go
(+53 files in other folders)
