[metadata]
name = S3Scanner
version = 2.0.0
author = Dan Salmon
author_email = dan@salmon.cat
description = Scan for open S3 buckets and dump the contents
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sa7mon/S3Scanner
project_urls =
    Bug Tracker = https://github.com/sa7mon/S3Scanner
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Security
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = S3Scanner
install_requires =
    boto3
python_requires = >=3.6

[tool:pytest]
python_files=test_*.py
filterwarnings = ignore::pytest.PytestCollectionWarning